fix: dark mode index and product details

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,11 +32,11 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    color-scheme: white;
   }
   body {
     color: white;
-    background: black;
+    background: white;
   }
 }
 
